Regenerate all clients.